<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.opengroup.osdu.legal</groupId>
	<artifactId>legal-acceptance-test</artifactId>
	<version>0.30.0-SNAPSHOT</version>
	<packaging>jar</packaging>

	<properties>
		<maven.compiler.target>17</maven.compiler.target>
		<maven.compiler.source>17</maven.compiler.source>
		<java.version>17</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.main.basedir>${project.basedir}</project.main.basedir>
		<aspectj.version>1.9.22</aspectj.version>
		<allure.version>2.31.0</allure.version>
		<log4j.version>2.23.0</log4j.version>
		<jackson.version>2.16.1</jackson.version>
		<jackson-databind.version>2.16.1</jackson-databind.version>
		<maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
		<argLine>
			--add-opens java.base/java.lang=ALL-UNNAMED
		</argLine>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>io.qameta.allure</groupId>
				<artifactId>allure-bom</artifactId>
				<version>${allure.version}</version>
				<type>pom</type>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>com.sun.jersey</groupId>
			<artifactId>jersey-client</artifactId>
			<version>1.19.4</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.9.0</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.10.4</version>
		</dependency>
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-console</artifactId>
			<version>1.10.4</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.12.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpcore</artifactId>
			<version>4.4.15</version>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>31.1-jre</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.28</version>
		</dependency>
		<dependency>
			<groupId>com.nimbusds</groupId>
			<artifactId>oauth2-oidc-sdk</artifactId>
			<version>9.15</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-to-slf4j</artifactId>
			<version>2.11.2</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-jdk14</artifactId>
			<version>1.8.0-beta4</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents.client5</groupId>
			<artifactId>httpclient5</artifactId>
			<version>5.2.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.opengroup.osdu</groupId>
			<artifactId>os-core-common</artifactId>
			<version>6.0.0</version>
		</dependency>
		<dependency>
			<groupId>io.qameta.allure</groupId>
			<artifactId>allure-junit5</artifactId>
			<version>${allure.version}</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
			</plugin>
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>${repo.releases.id}</id>
			<url>${repo.releases.url}</url>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>${publish.releases.id}</id>
			<url>${publish.releases.url}</url>
		</repository>
		<snapshotRepository>
			<id>${publish.snapshots.id}</id>
			<url>${publish.snapshots.url}</url>
		</snapshotRepository>
	</distributionManagement>
	<profiles>
		<profile>
			<id>Default</id>
			<activation>
				<property>
					<name>!repo.releases.id</name>
				</property>
			</activation>
			<properties>
				<repo.releases.id>community-maven-repo</repo.releases.id>
				<publish.snapshots.id>community-maven-via-job-token</publish.snapshots.id>
				<publish.releases.id>community-maven-via-job-token</publish.releases.id>
				<repo.releases.url>
					https://community.opengroup.org/api/v4/groups/17/-/packages/maven</repo.releases.url>
				<publish.snapshots.url>
					https://community.opengroup.org/api/v4/projects/44/packages/maven</publish.snapshots.url>
				<publish.releases.url>
					https://community.opengroup.org/api/v4/projects/44/packages/maven</publish.releases.url>
			</properties>
		</profile>
	</profiles>
</project>